--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,14 @@
-Changes in laeken version 0.4.7
+Changes in laeken version 0.5.0
 
-    + order of factors changed in function
-      'prop'
+    + order of factors changed in function 'prop'
+
+    + bugfixes in computation of weighted quantiles and quintile share ratio
+      to strictly follow Eurostat definitions
+
+    + Package title now in title case
+
+    + packages 'boot' and 'MASS' are now only Imports instead of Depends
+
 
 Changes in laeken version 0.4.6
 
